# PCL-FeatureBased-PointCloudRegistration

./: CMakeLists.txt  LICENSE  README.md  two_pointcloud_registration.cpp
two_point_cloud_registrationBasedOnCombinations/: CMakeLists.txt  evaluation.py  registration_visualization.py  run.sh  run_customed.sh  two_pointcloud_registration.cpp
two_point_cloud_registrationBasedOnCombinations/functions/: compute_correspondence_default.cpp  compute_correspondence_normalshooting.cpp  describe_feature.cpp  icp.cpp  reject_badcorrespondence.cpp
two_point_cloud_registration_combinations/: evaluation.py  include.h  registration_visualization.py  run.sh  run_console.sh  run_customized.sh
two_point_cloud_registration_combinations/functions/: compute_correspondence_backprojection.cpp  compute_gradient.cpp  compute_normal.cpp  extract_keypoints.cpp  filtering.cpp  hash.cpp
